--- a/css/common.css
+++ b/css/common.css
@@ -25,6 +25,10 @@ header .gnb > ul{
   display: flex;
   justify-content: space-evenly;
 }
+
+header .gnb:hover .sub, header .h_inner:hover .sub {
+  display: block;
+}
 header .gnb > ul > li{
   margin-left: 40px;
 }
@@ -34,11 +38,26 @@ header .gnb > ul > li > a{
   font-weight: 400;
 }
 header .sub{
-  display: none;
+    position: absolute;
+    width: 1920px;
+    top:100px;
+    text-align: center;
+    left: -120px;
+    height: 290px;
+    padding: 15px 0px;
+    background: #ffffff70;
+    display: none;
 }
-header .sub > ul{}
-header .sub > li{}
-header .sub > li > a{}
+header .sub > li{
+  padding: 10px 0px;
+}
+
+header .gnb ul li:first-child .sub {
+}
+
+header .sub > li > a{
+  font-size: 15px;
+}
 header .lnb{
   position: absolute;
   top: 50%;
